--- a/spuit.scss
+++ b/spuit.scss
@@ -5,6 +5,8 @@
 @import 'assets/stylesheets/spuit/variables/fonts';
 @import 'assets/stylesheets/spuit/variables/timing-functions';
 @import 'assets/stylesheets/spuit/variables/media-queries';
+@import 'assets/stylesheets/spuit/variables/colors';
+@import 'assets/stylesheets/spuit/variables/svgs';
 
 // module mixins
 @import 'assets/stylesheets/spuit/modules/clearfix';
