--- a/assets/stylesheets/spuit/components/_button.sass
+++ b/assets/stylesheets/spuit/components/_button.sass
@@ -15,7 +15,7 @@
   border: none
   outline: none
   &:link, &:visited, &:hover, &:active, &:active
-    text-decoration: none !important
+    text-decoration: none
   &:focus
     outline: none
   &:disabled,
