--- a/assets/stylesheets/spuit/components/_button.sass
+++ b/assets/stylesheets/spuit/components/_button.sass
@@ -22,8 +22,8 @@
   &.is-disabled
     +button-disabled
     opacity: 0.2
-  &.is-loading
-    +button-loading
+  // &.is-loading
+  //   +button-loading
 
 =button-disabled
   cursor: default
@@ -33,8 +33,6 @@
   +button-disabled
   +icon-loading
   opacity: 0.6
-  pointer-events: none
-  cursor: default
 
 // .button-normal
 //   +button-normal(10px 10px, #529ef6, #fff, 2px)
