--- a/spuit.scss
+++ b/spuit.scss
@@ -1,47 +1,47 @@
-@charset "utf-8";
+@charset 'utf-8';
 
 // valiables
-@import 'assets/stylesheets/spuit/variables/defaults';
-@import 'assets/stylesheets/spuit/variables/fonts';
-@import 'assets/stylesheets/spuit/variables/timing-functions';
-@import 'assets/stylesheets/spuit/variables/media-queries';
-@import 'assets/stylesheets/spuit/variables/colors';
-@import 'assets/stylesheets/spuit/variables/svgs';
+@import 'scss/variables/defaults';
+@import 'scss/variables/fonts';
+@import 'scss/variables/timing-functions';
+@import 'scss/variables/media-queries';
+@import 'scss/variables/colors';
+@import 'scss/variables/svgs';
 
 // module mixins
-@import 'assets/stylesheets/spuit/modules/clearfix';
-@import 'assets/stylesheets/spuit/modules/breakpoints';
-@import 'assets/stylesheets/spuit/modules/hide-text';
-@import 'assets/stylesheets/spuit/modules/fa';
-@import 'assets/stylesheets/spuit/modules/font-face';
-@import 'assets/stylesheets/spuit/modules/background-image';
-@import 'assets/stylesheets/spuit/modules/inherit';
-@import 'assets/stylesheets/spuit/modules/word-break';
-@import 'assets/stylesheets/spuit/modules/text-overflow';
-@import 'assets/stylesheets/spuit/modules/reset';
+@import 'scss/modules/clearfix';
+@import 'scss/modules/breakpoints';
+@import 'scss/modules/hide-text';
+@import 'scss/modules/fa';
+@import 'scss/modules/font-face';
+@import 'scss/modules/background-image';
+@import 'scss/modules/inherit';
+@import 'scss/modules/word-break';
+@import 'scss/modules/text-overflow';
+@import 'scss/modules/reset';
 
 // create styles
-@import 'assets/stylesheets/spuit/includes/animations';
-@import 'assets/stylesheets/spuit/includes/hiddens';
-@import 'assets/stylesheets/spuit/includes/spacers';
-@import 'assets/stylesheets/spuit/includes/webfonts';
-@import 'assets/stylesheets/spuit/includes/stickey-footer';
-@import 'assets/stylesheets/spuit/includes/spuit-utils';
-@import 'assets/stylesheets/spuit/includes/normalize';
-@import 'assets/stylesheets/spuit/includes/grid';
+@import 'scss/includes/animations';
+@import 'scss/includes/hiddens';
+@import 'scss/includes/spacers';
+@import 'scss/includes/webfonts';
+@import 'scss/includes/stickey-footer';
+@import 'scss/includes/spuit-utils';
+@import 'scss/includes/normalize';
+@import 'scss/includes/grid';
 
 // shortcut mixins
-@import 'assets/stylesheets/spuit/shortcuts/absolute';
-@import 'assets/stylesheets/spuit/shortcuts/centering';
-@import 'assets/stylesheets/spuit/shortcuts/disc';
+@import 'scss/shortcuts/absolute';
+@import 'scss/shortcuts/centering';
+@import 'scss/shortcuts/disc';
 
 // shortcut components, element
 // FIXME: 未整理、不要なものを削除するまでコメントアウト
-@import 'assets/stylesheets/spuit/components/icon';
-@import 'assets/stylesheets/spuit/components/button';
-@import 'assets/stylesheets/spuit/elements/table';
-@import 'assets/stylesheets/spuit/elements/input';
-@import 'assets/stylesheets/spuit/elements/fieldset';
-@import 'assets/stylesheets/spuit/elements/radio';
-@import 'assets/stylesheets/spuit/elements/checkbox';
-@import 'assets/stylesheets/spuit/elements/select';
+@import 'scss/components/icon';
+@import 'scss/components/button';
+@import 'scss/elements/table';
+@import 'scss/elements/input';
+@import 'scss/elements/fieldset';
+@import 'scss/elements/radio';
+@import 'scss/elements/checkbox';
+@import 'scss/elements/select';
