--- a/spuit.scss
+++ b/spuit.scss
@@ -39,6 +39,7 @@
 // FIXME: 未整理、不要なものを削除するまでコメントアウト
 @import 'scss/components/icon';
 @import 'scss/components/button';
+@import 'scss/components/switch';
 @import 'scss/elements/table';
 @import 'scss/elements/input';
 @import 'scss/elements/fieldset';
