--- a/assets/stylesheets/styles/config/_mixins.scss
+++ b/assets/stylesheets/styles/config/_mixins.scss
@@ -15,6 +15,9 @@
 @mixin input {
   @include font;
   @include input-normal(100%);
+  @include breakpoint-down(md) {
+    font-size: 16px;
+  }
 }
 
 @mixin table {
