--- a/spuit.scss
+++ b/spuit.scss
@@ -42,6 +42,7 @@
 @import 'scss/elements/table';
 @import 'scss/elements/input';
 @import 'scss/elements/fieldset';
-@import 'scss/elements/radio';
-@import 'scss/elements/checkbox';
+// @import 'scss/elements/radio';
+// @import 'scss/elements/checkbox';
+@import 'scss/elements/custom-checkbox';
 @import 'scss/elements/select';
