--- a/spuit.scss
+++ b/spuit.scss
@@ -1,48 +1,3 @@
 @charset 'utf-8';
 
-// valiables
-@import 'scss/variables/defaults';
-@import 'scss/variables/fonts';
-@import 'scss/variables/timing-functions';
-@import 'scss/variables/media-queries';
-@import 'scss/variables/colors';
-@import 'scss/variables/svgs';
-
-// module mixins
-@import 'scss/modules/clearfix';
-@import 'scss/modules/breakpoints';
-@import 'scss/modules/hide-text';
-@import 'scss/modules/fa';
-@import 'scss/modules/font-face';
-@import 'scss/modules/background-image';
-@import 'scss/modules/inherit';
-@import 'scss/modules/word-break';
-@import 'scss/modules/text-overflow';
-@import 'scss/modules/reset';
-
-// create styles
-@import 'scss/includes/animations';
-@import 'scss/includes/hiddens';
-@import 'scss/includes/spacers';
-@import 'scss/includes/webfonts';
-@import 'scss/includes/stickey-footer';
-@import 'scss/includes/spuit-utils';
-@import 'scss/includes/normalize';
-
-// shortcut mixins
-@import 'scss/shortcuts/absolute';
-@import 'scss/shortcuts/centering';
-@import 'scss/shortcuts/disc';
-
-// shortcut components, element
-// FIXME: 未整理、不要なものを削除するまでコメントアウト
-@import 'scss/components/icon';
-@import 'scss/components/button';
-@import 'scss/components/switch';
-@import 'scss/elements/table';
-@import 'scss/elements/input';
-@import 'scss/elements/fieldset';
-// @import 'scss/elements/radio';
-// @import 'scss/elements/checkbox';
-@import 'scss/elements/custom-checkbox';
-@import 'scss/elements/select';
+@import 'scss/spuit';
