--- a/scss/variables/_fonts.scss
+++ b/scss/variables/_fonts.scss
@@ -1,4 +1,4 @@
-$font-sans: 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', sans-serif !default;
+$font-sans: -apple-system,BlinkMacSystemFont,Helvetica Neue,Hiragino Kaku Gothic Pro,ヒラギノ角ゴ ProN W3,Arial,メイリオ,Meiryo,Osaka,sans-serif !default;
 $font-serif: 'ヒラギノ明朝 Pro W6', 'Hiragino Mincho Pro', 'HGS明朝E', 'ＭＳ Ｐ明朝', serif !default;
 
 $font-yu: YuGothic, '游ゴシック',$font-sans !default;
