--- a/assets/html/index.ejs
+++ b/assets/html/index.ejs
@@ -66,6 +66,8 @@
             <i class="icon-twitter"></i>
             <i class="icon-facebook"></i>
             <i class="icon-hatena"></i>
+
+            <span class="triangle-container"></span>
           </section>
 
         </div>
