--- a/assets/html/index.ejs
+++ b/assets/html/index.ejs
@@ -66,6 +66,7 @@
             <i class="icon-twitter"></i>
             <i class="icon-facebook"></i>
             <i class="icon-hatena"></i>
+            <i class="icon-svg"></i>
 
             <span class="triangle-container"></span>
           </section>
