--- a/scss/modules/_background-image.scss
+++ b/scss/modules/_background-image.scss
@@ -42,6 +42,16 @@
   line-height: $h;
 }
 
+@mixin background-map-svg($map-svg) {
+  display: inline-block;
+  background-image: url("data:image/png;base64, #{map-get($map-svg, base64)}");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  width: map-get($map-svg, width);
+  height: map-get($map-svg, height);
+}
+
 //for rails
 @mixin background-image-url($w: 50px, $h: 50px, $path: '/images/xxx', $extension: 'png') {
   display: inline-block;
