--- a/scss/includes/_spacers.scss
+++ b/scss/includes/_spacers.scss
@@ -35,7 +35,7 @@ from: https://github.com/twbs/bootstrap/blob/v4-dev/scss/utilities/_spacing.scss
       )
     ) !default;
 
-    @each $breakpoint in map-keys($media-breakpoints) {
+    @each $breakpoint in map-keys($grid-breakpoints) {
       @include breakpoint-up($breakpoint) {
 
         @each $prop, $abbrev in (margin: m, padding: p) {
