--- a/assets/html/index.ejs
+++ b/assets/html/index.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <input type="checkbox" id="menu-control">
+  <input type="checkbox" id="hamburger">
   
   <main class="l-container">
     <div class="l-sidebar">
@@ -47,7 +47,7 @@
     </div>
     
     <div class="l-content">
-      <label for="menu-control" class="toggle-menu-control">
+      <label for="hamburger" class="hamburger">
         <i class="icon-hamburger"></i>
       </label>
       
