--- a/scss/elements/_fieldset.scss
+++ b/scss/elements/_fieldset.scss
@@ -1,4 +1,4 @@
-@mixin fieldset-base($legend-width: 100px, $gutter: 20px) {
+@mixin fieldset-base($legend-width: 5rem, $gutter: 1rem) {
   @include clearfix;
   position: relative;
   padding-left: $legend-width + $gutter;
@@ -35,14 +35,23 @@
 }
 
 //not <fieldset/>
-@mixin fieldset-flex($legend-width: 30%, $gutter: 20px) {
+@mixin fieldset-flex($legend-width: 30%, $gutter: 1rem) {
   display: flex;
   justify-content: space-between;
   align-items: center;
   min-width: 0;
   padding: 0;
-  margin: 0 0 10px;
+  margin: 0 0 $gutter;
   border: 0;
+  
+  @include breakpoint-down(md) {
+    display: block;
+
+    > label, > legend {
+      display: block;
+      padding-bottom: 0.5rem;
+    }
+  }
   
   &:last-child {
     margin-bottom: 0;
