--- a/assets/html/index.ejs
+++ b/assets/html/index.ejs
@@ -16,7 +16,7 @@
   <main class="l-container">
     <div class="l-sidebar">
       <div class="sidebar">
-        <h1>Spuit</h1>
+        <span><a href="/">spuit</a></span>
         <ul>
           <li>
             <a href="#typefaces">Typefaces</a>
@@ -53,7 +53,7 @@
       
       <div class="content">
 
-        <section class="demo-styles" id="typefaces">
+        <section class="demo-block" id="typefaces">
           <h2 class="title">Typefaces</h2>
           <h1>heading 1</h1>
           <h2>heading 2</h2>
@@ -64,7 +64,7 @@
           <p>paragraf <a href="#">link</a> <b>bold</b></p>
         </section>
 
-        <section class="demo-styles" id="form">
+        <section class="demo-block" id="form">
           <h2 class="title">Form</h2>
         
           <form>
@@ -220,7 +220,7 @@
           </form>
         </section>
         
-        <section class="demo-styles" id="table">
+        <section class="demo-block" id="table">
           <h2 class="title">Table</h2>
           <table class="table">
             <thead>
@@ -302,11 +302,11 @@
           </table>
         </section>
         
-        <section class="demo-styles" id="components">
+        <section class="demo-block" id="components">
           <h2 class="title">Components</h2>
         </section>
         
-        <section class="demo-styles" id="buttons">
+        <section class="demo-block" id="buttons">
           <h2 class="title">Buttons</h2>
           <a href="#" class="button">Button</a>
           <input type="submit" class="button" value="Button" />
@@ -317,7 +317,7 @@
           <a href="#" class="button-emboss">Button</a>
         </section>
         
-        <section class="demo-styles"id="icons">
+        <section class="demo-block"id="icons">
           <h2 class="title">Icons</h2>
           <i class="icon-hamburger"></i>
           <i class="icon-twitter"></i>
@@ -328,7 +328,7 @@
           <span class="triangle-container"></span>
         </section>
         
-        <section class="demo-styles" id="utilities">
+        <section class="demo-block" id="utilities">
           <h2 class="title">Utilities</h2>
           <h3>word break</h3>
           <p class="word-break">.word-break</p>
