--- a/scss/spuit.scss
+++ b/scss/spuit.scss
@@ -6,6 +6,7 @@
 @import 'variables/media-queries';
 @import 'variables/colors';
 @import 'variables/svgs';
+@import 'variables/defaults';
 
 // module mixins
 @import 'modules/clearfix';
@@ -37,8 +38,11 @@
 // shortcut components, element
 @import 'components/button';
 @import 'components/switch';
+@import 'components/group';
+
 @import 'elements/table';
 @import 'elements/input';
 @import 'elements/fieldset';
-@import 'elements/custom-checkbox';
+@import 'elements/radio';
+@import 'elements/custom-radio';
 @import 'elements/select';
