--- a/site/themes/spuit/assets/stylesheets/styles/config/_variables.scss
+++ b/site/themes/spuit/assets/stylesheets/styles/config/_variables.scss
@@ -1,14 +1,6 @@
 // colors
-$color-black: #444;
+$color-black: #222;
 $color-blue: #529ef6;
 $color-pink: #E87571;
-
-// grids
-$media-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px
-);
-$box-shadow: 0 5px 10px rgba(#000, 0.1);
+$color-gray: #767676;
+$color-lightgray: #eee;
