--- a/scss/elements/_fieldset.scss
+++ b/scss/elements/_fieldset.scss
@@ -1,72 +1,35 @@
-@mixin fieldset-base($legend-width: 5rem, $gutter: 1rem) {
-  @include clearfix;
-  position: relative;
-  padding-left: $legend-width + $gutter;
-  padding-bottom: 0.5rem;
+@mixin fieldset-horizontal {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 
-  @include breakpoint-down(sm) {
-    padding-left: 0;
-    padding-bottom: 1rem;
-  }
-
-  > legend {
-    width: $legend-width;
-    margin-left: -($legend-width + $gutter);
-    display: inline-block;
-    vertical-align: middle;
-    float: left;
-
-    @include breakpoint-down(sm) {
-      display: block;
-      float: none;
-      width: auto;
-      margin-left: 0;
+  > * {
+    &:first-child {
+      flex: 0 0 30%;
+    }
+    &:not(:first-child) {
+      flex: 1 1 auto;
     }
   }
 
-  &.has-padding {
-    > legend {
-      padding-top: 0.5rem;
-      @include breakpoint-down(sm) {
-        padding-top: 0;
+  &.has-input {
+    > * {
+      &:first-child {
+        margin-top: 0.6rem;
       }
     }
   }
 }
 
-//not <fieldset/>
-@mixin fieldset-flex($legend-width: 30%, $gutter: 1rem) {
+@mixin fieldset-vertical {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-width: 0;
-  padding: 0;
-  margin: 0 0 $gutter;
-  border: 0;
-  
-  @include breakpoint-down(md) {
-    display: block;
+  flex-wrap: wrap;
 
-    > label, > legend {
-      display: block;
-      padding-bottom: 0.5rem;
+  > * {
+    flex-basis: 100%;
+
+    &:first-child {
+      margin-bottom: 0.5rem;
     }
-  }
-  
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  label, legend {
-    margin-bottom: 0;
-  }
-
-  > legend {
-    width: $legend-width;
-    padding-right: $gutter;
-  }
-
-  > *:not(legend) {
-    flex: 1;
   }
 }
