--- a/scss/variables/_defaults.scss
+++ b/scss/variables/_defaults.scss
@@ -1,3 +1,4 @@
 $gradient: linear-gradient(to right bottom, #000 0%, lighten(#000, 10%) 100%) !default;
 $shadow: 0px 5px 10px rgba(0, 0, 0, 0.1) !default;
 $transition: all 0.2s ease-out !default;
+$outline-active: 3px solid rgba(#529ef6, 0.2) !default;
