--- a/site/themes/spuit/layouts/_default/single.html
+++ b/site/themes/spuit/layouts/_default/single.html
@@ -2,13 +2,13 @@
 
 <div class="entry {{ .Params.class }}">
   <h1>{{ .Title }}</h1>
-  {{/* partial "parts/info" . */}}
+  {{ partial "parts/info" . }}
 
   <div class="entry__content">
     {{ .Content }}
   </div>
 
-  {{ partial "widgets/related" . }}
+  {{/* partial "widgets/related" . */}}
 </div>
 
 {{ end }}
